[gd_scene load_steps=91 format=2]

[ext_resource path="res://Assets/UI/lvlSelectBlue.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Terminal-16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main Menu/Level Select.gd" type="Script" id=3]
[ext_resource path="res://Level Construction Tools/Fade/Fade In.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level Construction Tools/Tileset Scenes/Lab Floors.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level Construction Tools/Tileset Scenes/Lab Walls.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main Menu/diagonalparalax.gd" type="Script" id=7]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/codebot sprite sheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/lvlSelectRed.png" type="Texture" id=9]
[ext_resource path="res://Audio/Music/soft-piano-100-bpm.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Fonts/Terminal.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/UI/lvlSelectPurple.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 8 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 8 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 8 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 8 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 8 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 8 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 8 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 8 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 8 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 8 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 8 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 8 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 8 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 8 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="SpriteFrames" id=105]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "...",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "Motley crew",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "Move n Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 104 ) ],
"loop": true,
"name": "T Pose",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "Typing",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "Typing and jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=106]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=4]
resource_name = "Fade_Intro"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Fade_Option"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade_Quit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fade_Start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Light Blue Casing" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = 64.0
margin_top = 40.0
margin_right = 104.0
margin_bottom = 201.0
rect_scale = Vector2( 44.8562, 5.94597 )
color = Color( 0, 0.6, 0.858824, 1 )

[node name="Dark Blue of case" type="ColorRect" parent="Light Blue Casing"]
margin_left = 1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 133.0
color = Color( 0.0705882, 0.270588, 0.462745, 1 )

[node name="T pose nae nae baby" type="ParallaxBackground" parent="Light Blue Casing/Dark Blue of case"]
layer = 0
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="Light Blue Casing/Dark Blue of case/T pose nae nae baby"]
light_mask = 0
position = Vector2( 1042.66, 584 )
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 1440, 1440 )
script = ExtResource( 7 )
speed = 200.0

[node name="T pose nae nae baby" type="AnimatedSprite" parent="Light Blue Casing/Dark Blue of case/T pose nae nae baby/ParallaxLayer"]
show_behind_parent = true
position = Vector2( -66.66, -152 )
frames = SubResource( 105 )
animation = "T Pose"
playing = true

[node name="Green led Screen" type="ColorRect" parent="Light Blue Casing/Dark Blue of case"]
margin_left = 0.426782
margin_top = 4.41814
margin_right = 37.4268
margin_bottom = 126.418
color = Color( 0.14902, 0.360784, 0.258824, 1 )

[node name="lvl1" type="Button" parent="."]
margin_left = 791.98
margin_top = 320.0
margin_right = 819.98
margin_bottom = 342.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 9 )
flat = true

[node name="Label" type="Label" parent="lvl1"]
margin_left = 7.99323
margin_top = 4.92703
margin_right = 21.9932
margin_bottom = 19.927
custom_fonts/font = SubResource( 106 )
text = "1"
align = 1

[node name="lvl2" type="Button" parent="."]
margin_left = 919.98
margin_top = 320.0
margin_right = 947.98
margin_bottom = 342.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 1 )
flat = true

[node name="Label" type="Label" parent="lvl2"]
margin_left = 7.99323
margin_top = 4.92703
margin_right = 21.9932
margin_bottom = 19.927
custom_fonts/font = SubResource( 106 )
text = "2"
align = 1

[node name="lvl3" type="Button" parent="."]
margin_left = 1042.66
margin_top = 320.0
margin_right = 1070.66
margin_bottom = 342.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 12 )
flat = true

[node name="Label" type="Label" parent="lvl3"]
margin_left = 7.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 106 )
text = "3"
align = 1

[node name="lvl4" type="Button" parent="."]
margin_left = 1042.66
margin_top = 320.0
margin_right = 1070.66
margin_bottom = 342.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 12 )
flat = true

[node name="Label" type="Label" parent="lvl4"]
margin_left = 7.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 106 )
text = "3"
align = 1

[node name="Back" type="Button" parent="."]
margin_left = 884.0
margin_top = 531.0
margin_right = 1035.0
margin_bottom = 553.0
custom_fonts/font = ExtResource( 2 )
text = "Back to main menu"
flat = true

[node name="Lab Wall Tiles" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -56 )
tile_data = PoolIntArray( 1900546, 7, 0, 1900547, 7, 0, 1900548, 7, 0, 1900549, 7, 0, 1900550, 7, 0, 1900551, 7, 0, 1900552, 7, 0, 1900553, 7, 0, 1900554, 7, 0, 1900555, 7, 0, 1900556, 7, 0, 1900557, 7, 0, 1900558, 7, 0, 1900559, 7, 0, 1900560, 11, 0, 1900561, 7, 0, 1900562, 7, 0, 1900563, 7, 0, 1900564, 7, 0, 1900565, 7, 0, 1900566, 7, 0, 1900567, 7, 0, 1900568, 7, 0, 1900569, 7, 0, 1900570, 7, 0, 1900571, 7, 0, 1900572, 11, 10, 1900573, 7, 0, 1900574, 7, 0, 1900575, 7, 0, 1900576, 7, 0, 1900577, 7, 0, 1900578, 7, 0, 1900579, 7, 0, 1900580, 7, 0, 1900581, 7, 0, 1900582, 7, 0, 1900583, 7, 0, 1900584, 7, 0, 1900585, 11, 65546, 1900586, 7, 0, 1900587, 7, 0, 1900588, 7, 0, 1900589, 7, 0, 1900590, 11, 65541, 1900591, 7, 0, 1900592, 7, 0, 1900593, 7, 0, 1900594, 7, 0, 1900595, 7, 0, 1900596, 7, 0, 1900597, 7, 0, 1900598, 11, 65538, 1900599, 7, 0, 1900600, 7, 0, 1900601, 7, 0, 1900602, 7, 0, 1966082, 7, 0, 1966083, 7, 0, 1966084, 7, 0, 1966085, 7, 0, 1966086, 7, 0, 1966087, 7, 0, 1966088, 11, 65536, 1966089, 7, 0, 1966090, 7, 0, 1966091, 7, 0, 1966092, 7, 0, 1966093, 11, 9, 1966094, 7, 0, 1966095, 7, 0, 1966096, 7, 0, 1966097, 7, 0, 1966098, 7, 0, 1966099, 12, 65537, 1966100, 7, 0, 1966101, 7, 0, 1966102, 7, 0, 1966103, 7, 0, 1966104, 7, 0, 1966105, 11, 2, 1966106, 7, 0, 1966107, 7, 0, 1966108, 7, 0, 1966109, 7, 0, 1966110, 11, 5, 1966111, 7, 0, 1966112, 7, 0, 1966113, 7, 0, 1966114, 7, 0, 1966115, 7, 0, 1966116, 7, 0, 1966117, 7, 0, 1966118, 11, 65545, 1966119, 7, 0, 1966120, 7, 0, 1966121, 7, 0, 1966122, 7, 0, 1966123, 7, 0, 1966124, 7, 0, 1966125, 7, 0, 1966126, 7, 0, 1966127, 7, 0, 1966128, 7, 0, 1966129, 11, 65537, 1966130, 7, 0, 1966131, 7, 0, 1966132, 7, 0, 1966133, 7, 0, 1966134, 7, 0, 1966135, 7, 0, 1966136, 11, 65539, 1966137, 7, 0, 1966138, 7, 0, 2031618, 7, 0, 2031619, 7, 0, 2031620, 7, 0, 2031621, 7, 0, 2031622, 7, 0, 2031623, 7, 0, 2031624, 7, 0, 2031625, 7, 0, 2031626, 7, 0, 2031627, 7, 0, 2031628, 7, 0, 2031629, 7, 0, 2031630, 7, 0, 2031631, 7, 0, 2031632, 7, 0, 2031633, 7, 0, 2031634, 4, 0, 2031635, 12, 1, 2031636, 12, 65536, 2031637, 7, 0, 2031638, 7, 0, 2031639, 7, 0, 2031640, 7, 0, 2031641, 11, 3, 2031642, 11, 4, 2031643, 7, 0, 2031644, 11, 65544, 2031645, 7, 0, 2031646, 7, 0, 2031647, 7, 0, 2031648, 11, 1, 2031649, 7, 0, 2031650, 7, 0, 2031651, 7, 0, 2031652, 11, 65540, 2031653, 7, 0, 2031654, 7, 0, 2031655, 7, 0, 2031656, 7, 0, 2031657, 7, 0, 2031658, 7, 0, 2031659, 7, 0, 2031660, 7, 0, 2031661, 7, 0, 2031662, 7, 0, 2031663, 7, 0, 2031664, 7, 0, 2031665, 7, 0, 2031666, 7, 0, 2031667, 7, 0, 2031668, 7, 0, 2031669, 7, 0, 2031670, 7, 0, 2031671, 7, 0, 2031672, 7, 0, 2031673, 7, 0, 2031674, 7, 0, 2097154, 8, 0, 2097155, 9, 3, 2097156, 9, 9, 2097157, 9, 9, 2097158, 9, 2, 2097159, 9, 0, 2097160, 9, 4, 2097161, 9, 0, 2097162, 9, 7, 2097163, 9, 2, 2097164, 9, 9, 2097165, 9, 1, 2097166, 9, 4, 2097167, 9, 4, 2097168, 9, 2, 2097169, 9, 0, 2097170, 9, 9, 2097171, 9, 9, 2097172, 9, 4, 2097173, 9, 9, 2097174, 9, 6, 2097175, 9, 0, 2097176, 9, 6, 2097177, 9, 2, 2097178, 9, 8, 2097179, 9, 4, 2097180, 9, 2, 2097181, 9, 4, 2097182, 9, 4, 2097183, 9, 8, 2097184, 9, 0, 2097185, 9, 7, 2097186, 9, 0, 2097187, 9, 6, 2097188, 9, 8, 2097189, 9, 6, 2097190, 9, 0, 2097191, 9, 8, 2097192, 9, 6, 2097193, 9, 8, 2097194, 9, 4, 2097195, 9, 4, 2097196, 9, 8, 2097197, 9, 1, 2097198, 9, 1, 2097199, 9, 8, 2097200, 9, 8, 2097201, 9, 6, 2097202, 9, 4, 2097203, 9, 7, 2097204, 9, 8, 2097205, 9, 4, 2097206, 9, 6, 2097207, 9, 4, 2097208, 9, 7, 2097209, 9, 2, 2097210, 9, 5 )

[node name="Lab Floor Tiles" parent="Lab Wall Tiles" instance=ExtResource( 5 )]
cell_size = Vector2( 32, 32 )
tile_data = PoolIntArray( 65536, 0, 720913, 65537, 0, 720897, 65538, 0, 720896, 65539, 0, 720900, 65540, 0, 720896, 65541, 0, 720905, 65542, 0, 720897, 65543, 0, 720897, 65544, 0, 720902, 65545, 0, 720904, 65546, 0, 720897, 65547, 0, 720904, 65548, 0, 720897, 65549, 0, 720904, 65550, 0, 131075, 65551, 0, 720903, 65552, 0, 720896, 65553, 0, 720898, 65554, 0, 720899, 65555, 0, 720905, 65556, 0, 720903, 65557, 0, 720897, 65558, 0, 131075, 65559, 0, 720899, 65560, 0, 720900, 65561, 0, 720900, 65562, 0, 720901, 65563, 0, 720901, 65564, 0, 720902, 65565, 0, 131075, 65566, 0, 720905, 65567, 0, 720896, 65568, 0, 720900, 65569, 0, 720898, 65570, 0, 131075, 65571, 0, 720905, 65572, 0, 720901, 65573, 0, 720905, 65574, 0, 720904, 65575, 0, 720897, 65576, 0, 720900, 65577, 0, 720897, 65578, 0, 720902, 65579, 0, 131075, 65580, 0, 720899, 65581, 0, 720900, 65582, 0, 720900, 65583, 0, 720904, 65584, 0, 720904, 65585, 0, 720896, 65586, 0, 720900, 65587, 0, 720905, 65588, 0, 720896, 65589, 0, 720897, 65590, 0, 720905, 65591, 0, 720903, 65592, 0, 720899, 65593, 0, 720902, 65594, 0, 720897, 65595, 0, 720911, 131072, 0, 983067, 131073, 0, 458766, 131074, 0, 458755, 131075, 0, 458762, 131076, 0, 262147, 131077, 0, 458764, 131078, 0, 458764, 131079, 0, 458762, 131080, 0, 458763, 131081, 0, 458761, 131082, 0, 458754, 131083, 0, 262147, 131084, 0, 458760, 131085, 0, 458764, 131086, 0, 458760, 131087, 0, 458755, 131088, 0, 458752, 131089, 0, 458757, 131090, 0, 458758, 131091, 0, 458762, 131092, 0, 458762, 131093, 0, 262147, 131094, 0, 458759, 131095, 0, 458762, 131096, 0, 458753, 131097, 0, 458761, 131098, 0, 458757, 131099, 0, 458758, 131100, 0, 458761, 131101, 0, 458757, 131102, 0, 262147, 131103, 0, 458757, 131104, 0, 458754, 131105, 0, 458761, 131106, 0, 458753, 131107, 0, 458759, 131108, 0, 458752, 131109, 0, 262147, 131110, 0, 262147, 131111, 0, 458759, 131112, 0, 458760, 131113, 0, 458753, 131114, 0, 458761, 131115, 0, 262147, 131116, 0, 458752, 131117, 0, 458760, 131118, 0, 262147, 131119, 0, 458762, 131120, 0, 458762, 131121, 0, 458752, 131122, 0, 458752, 131123, 0, 458755, 131124, 0, 458760, 131125, 0, 458758, 131126, 0, 458753, 131127, 0, 458760, 131128, 0, 262147, 131129, 0, 458760, 131130, 0, 720915, 131131, 0, 917529, 196608, 0, 1114139, 196609, 0, 196612, 196666, 0, 1114139, 196667, 0, 983065, 262144, 0, 851995, 262145, 0, 983065, 262202, 0, 917531, 262203, 0, 1048601, 327680, 0, 851995, 327681, 0, 1114137, 327738, 0, 1114139, 327739, 0, 851993, 393216, 0, 196635, 393217, 0, 983065, 393274, 0, 196635, 393275, 0, 196612, 458752, 0, 1048603, 458753, 0, 983065, 458810, 0, 851995, 458811, 0, 917529, 524288, 0, 917531, 524289, 0, 1114137, 524346, 0, 196610, 524347, 0, 851993, 589824, 0, 917531, 589825, 0, 917529, 589882, 0, 1048603, 589883, 0, 1114137, 655360, 0, 196610, 655361, 0, 851993, 655418, 0, 983067, 655419, 0, 196612, 720896, 0, 851995, 720897, 0, 851993, 720954, 0, 917531, 720955, 0, 196612, 786432, 0, 917531, 786433, 0, 851993, 786490, 0, 1048603, 786491, 0, 851993, 851968, 0, 851995, 851969, 0, 1114137, 852026, 0, 983067, 852027, 0, 917529, 917504, 0, 917531, 917505, 0, 851993, 917562, 0, 917531, 917563, 0, 1114137, 983040, 0, 196610, 983041, 0, 1048601, 983098, 0, 917531, 983099, 0, 983065, 1048576, 0, 917531, 1048577, 0, 1114137, 1048634, 0, 196635, 1048635, 0, 1114137, 1114112, 0, 917531, 1114113, 0, 1048601, 1114170, 0, 1048603, 1114171, 0, 196612, 1179648, 0, 917531, 1179649, 0, 917529, 1179706, 0, 1114139, 1179707, 0, 1048601, 1245184, 0, 1114139, 1245185, 0, 1114137, 1245242, 0, 917531, 1245243, 0, 196612, 1310720, 0, 196610, 1310721, 0, 917529, 1310778, 0, 196635, 1310779, 0, 1048601, 1376256, 0, 851995, 1376257, 0, 196612, 1376314, 0, 983067, 1376315, 0, 1114137, 1441792, 0, 851995, 1441793, 0, 983065, 1441850, 0, 983067, 1441851, 0, 1114137, 1507328, 0, 983067, 1507329, 0, 851993, 1507386, 0, 851995, 1507387, 0, 917529, 1572864, 0, 917531, 1572865, 0, 983065, 1572922, 0, 983067, 1572923, 0, 1048601, 1638400, 0, 851995, 1638401, 0, 1114137, 1638458, 0, 196635, 1638459, 0, 917529, 1703936, 0, 983067, 1703937, 0, 1048601, 1703994, 0, 917531, 1703995, 0, 1048601, 1769472, 0, 983067, 1769473, 0, 983065, 1769530, 0, 917531, 1769531, 0, 1048601, 1835008, 0, 851995, 1835009, 0, 917529, 1835066, 0, 983067, 1835067, 0, 1114137, 1900544, 0, 983067, 1900545, 0, 1114137, 1900602, 0, 1114139, 1900603, 0, 851993, 1966080, 0, 196610, 1966081, 0, 983065, 1966138, 0, 1114139, 1966139, 0, 851993, 2031616, 0, 917531, 2031617, 0, 1114137, 2031634, 2, 0, 2031674, 0, 917531, 2031675, 0, 196612, 2097152, 0, 983067, 2097153, 0, 917529, 2097210, 0, 917531, 2097211, 0, 851993, 2162688, 0, 983067, 2162689, 0, 720907, 2162690, 0, 720903, 2162691, 0, 720896, 2162692, 0, 720905, 2162693, 0, 720896, 2162694, 0, 720904, 2162695, 0, 131075, 2162696, 0, 720898, 2162697, 0, 720904, 2162698, 0, 720897, 2162699, 0, 720899, 2162700, 0, 720902, 2162701, 0, 720904, 2162702, 0, 720902, 2162703, 0, 720896, 2162704, 0, 720904, 2162705, 0, 720903, 2162706, 0, 720903, 2162707, 0, 720904, 2162708, 0, 720901, 2162709, 0, 720905, 2162710, 0, 720900, 2162711, 0, 720897, 2162712, 0, 720904, 2162713, 0, 720899, 2162714, 0, 131075, 2162715, 0, 720903, 2162716, 0, 720905, 2162717, 0, 720897, 2162718, 0, 720903, 2162719, 0, 720902, 2162720, 0, 720905, 2162721, 0, 720903, 2162722, 0, 720901, 2162723, 0, 720905, 2162724, 0, 720902, 2162725, 0, 720897, 2162726, 0, 720899, 2162727, 0, 720903, 2162728, 0, 720898, 2162729, 0, 131075, 2162730, 0, 720896, 2162731, 0, 720905, 2162732, 0, 720899, 2162733, 0, 720900, 2162734, 0, 720905, 2162735, 0, 131075, 2162736, 0, 720901, 2162737, 0, 720899, 2162738, 0, 720904, 2162739, 0, 720897, 2162740, 0, 720905, 2162741, 0, 720899, 2162742, 0, 720896, 2162743, 0, 720896, 2162744, 0, 720899, 2162745, 0, 720900, 2162746, 0, 720909, 2162747, 0, 851993, 2228224, 0, 262146, 2228225, 0, 458755, 2228226, 0, 262147, 2228227, 0, 262147, 2228228, 0, 458753, 2228229, 0, 458761, 2228230, 0, 458755, 2228231, 0, 458756, 2228232, 0, 458752, 2228233, 0, 458756, 2228234, 0, 458754, 2228235, 0, 458759, 2228236, 0, 458757, 2228237, 0, 458762, 2228238, 0, 458763, 2228239, 0, 458764, 2228240, 0, 458755, 2228241, 0, 262147, 2228242, 0, 458756, 2228243, 0, 458761, 2228244, 0, 458759, 2228245, 0, 458764, 2228246, 0, 458758, 2228247, 0, 262147, 2228248, 0, 458756, 2228249, 0, 458752, 2228250, 0, 458757, 2228251, 0, 458759, 2228252, 0, 458764, 2228253, 0, 458757, 2228254, 0, 458763, 2228255, 0, 458764, 2228256, 0, 458759, 2228257, 0, 458753, 2228258, 0, 458755, 2228259, 0, 458760, 2228260, 0, 458762, 2228261, 0, 262147, 2228262, 0, 458752, 2228263, 0, 458752, 2228264, 0, 262147, 2228265, 0, 458760, 2228266, 0, 458762, 2228267, 0, 458763, 2228268, 0, 458763, 2228269, 0, 458763, 2228270, 0, 458758, 2228271, 0, 458759, 2228272, 0, 458760, 2228273, 0, 458758, 2228274, 0, 458760, 2228275, 0, 458752, 2228276, 0, 458762, 2228277, 0, 458753, 2228278, 0, 458759, 2228279, 0, 458762, 2228280, 0, 458758, 2228281, 0, 458759, 2228282, 0, 458763, 2228283, 0, 327691 )

[node name="IntroRect" parent="." instance=ExtResource( 4 )]

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_left = -66.5281
margin_top = -346.283
margin_right = 1933.47
margin_bottom = 1653.72
color = Color( 0, 0, 0, 0 )

[node name="Fade_Animation" type="AnimationPlayer" parent="Fade"]
anims/Fade_Intro = SubResource( 4 )
anims/Fade_Option = SubResource( 1 )
anims/Fade_Quit = SubResource( 2 )
anims/Fade_Start = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="pressed" from="lvl1" to="." method="_on_lvl1_pressed"]
[connection signal="pressed" from="lvl2" to="." method="_on_lvl2_pressed"]
[connection signal="pressed" from="lvl3" to="." method="_on_lvl3_pressed"]
[connection signal="pressed" from="lvl4" to="." method="_on_lvl4_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="animation_finished" from="Fade/Fade_Animation" to="." method="_on_Fade_Animation_animation_finished"]
